--- a/index.css
+++ b/index.css
@@ -88,6 +88,11 @@ footer .contact-icons {
   padding: 20px;
   border-radius: 20px 0px 20px 0px;
 }
+.dice {
+  font-size: 6rem;
+  animation-duration: 1s;
+  animation-fill-mode: forwards;
+}
 button {
   font-size: 1.5rem;
   padding: 5px 10px;
@@ -111,13 +116,31 @@ ul {
   width: 100%;
 }
 ul li {
-  box-shadow: 3px 1.5px 10px rgba(0, 0, 0, 0.5);
+  box-shadow: 3px 1.5px 5px rgba(0, 0, 0, 0.5);
   padding: 10px;
   border-radius: 5px;
   width: 100%;
   display: flex;
   justify-content: space-between;
   margin-top: 15px;
+}
+.roll-animation {
+  animation-name: roll;
+}
+
+@keyframes roll {
+  0% {
+    transform: rotateY(0deg) rotateX(0deg);
+  }
+  /* 25% {
+    transform: rotateY(180deg) rotateX(180deg);
+  }
+  50% {
+    transform: rotateY(360deg) rotateX(360deg);
+  } */
+  100% {
+    transform: rotateY(720deg) rotateX(720deg);
+  }
 }
 
 @media screen and (max-width: 450px) {
