--- a/index.css
+++ b/index.css
@@ -130,16 +130,10 @@ ul li {
 
 @keyframes roll {
   0% {
-    transform: rotateY(0deg) rotateX(0deg);
+    transform: rotateY(0deg) rotateX(0deg) rotateZ(0deg);
   }
-  /* 25% {
-    transform: rotateY(180deg) rotateX(180deg);
-  }
-  50% {
-    transform: rotateY(360deg) rotateX(360deg);
-  } */
   100% {
-    transform: rotateY(720deg) rotateX(720deg);
+    transform: rotateY(720deg) rotateX(720deg) rotateZ(720deg);
   }
 }
 
